--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     {
       "name": "Viktoriya Savkina",
       "email": "viktoriya.savkina@gmail.com"
+    },
+    {
+      "name": "Lara Weiss",
+      "email": "laraweiss6464@pm.me"
     }
   ],
   "license": "MIT",
